--- a/ownership/Cargo.toml
+++ b/ownership/Cargo.toml
@@ -1,6 +1,5 @@
-workspace = { members = [ "guessing_game", "ownership","variables"] }
 [package]
-name = "the-rust-programming-lang"
+name = "ownership"
 version = "0.1.0"
 edition = "2021"
 
