--- a/using_structs/Cargo.toml
+++ b/using_structs/Cargo.toml
@@ -1,6 +1,5 @@
-workspace = { members = [ "guessing_game", "ownership", "using_structs","variables"] }
 [package]
-name = "the-rust-programming-lang"
+name = "using_structs"
 version = "0.1.0"
 edition = "2021"
 
