--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,21 @@
-workspace = { members = [ "enums_pattern_matching", "guessing_game", "ownership", "using_structs","variables"] }
+[workspace]
+members = [
+    "enums_pattern_matching",
+    "guessing_game",
+    "ownership",
+    "using_structs",
+    "variables",
+    "minigrep",
+    "collections"
+]
 [package]
 name = "the-rust-programming-lang"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[cargo-new]
+vcs = "none"
 
 [dependencies]
